--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.11",
     "@types/node": "^22.4.1",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "ts-node": "^10.0.0",
+    "nodemon": "^2.0.15"
+    
   },
   "main": "index.js",
   "keywords": [],
